--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,14 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\EventListener\TripListener:
+        tags:
+            -  
+                name: kernel.event_listener 
+                event: trip.registration 
+                method: onTripRegistration
+
+            - 
+                name: kernel.event_listener
+                event: trip.unregistration
+                method: onTripUnregistration 
