--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,7 +24,8 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                # target: app_login
+                target: app_login
+                
             remember_me:
                 secret:   '%kernel.secret%' # required
                 lifetime: 604800 # 1 week in seconds    
