--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,8 +15,6 @@
         <server name="SHELL_VERBOSITY" value="-1" />
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.5" />
-        <env name="APP_ENV" value="test"/>
-        <env name="DATABASE_URL" value="%env(DATABASE_URL)%"/>
     </php>
 
     <testsuites>
@@ -29,6 +27,9 @@
         <include>
             <directory suffix=".php">src</directory>
         </include>
+        <report>
+            <html outputDirectory="tests/coverage-report" />
+        </report>
     </coverage>
 
     <listeners>
