--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,6 +41,10 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+#        - { path: ^/profil, roles: ROLE_ADMIN }
+#
+#    role_hierarchy:
+#        ROLE_ADMIN: ROLE_USER
 
 when@test:
     security:
