--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^3.3",
         "fakerphp/faker": "^1.23",
         "knplabs/knp-paginator-bundle": "^6.6",
+        "league/csv": "^9.18",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.33",
         "symfony/asset": "7.1.*",
